@@ -1,5 +1,10 @@
 2020-12-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/libpoke.h: Prototype for pk_decl_set_val.
+	* libpoke/libpoke.c (pk_decl_set_val): New function.
+
+2020-12-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/std.pk (reverse): New function.
 	* testsuite/poke.std/std-test.pk: Tests for `reverse'.
 	* doc/poke.texi (Array Functions): New section.
